--- a/output/index.html
+++ b/output/index.html
@@ -10889,7 +10889,7 @@ Elm.Main.make = function (_elm) {
    var Tick = {ctor: "Tick"};
    var tick = A2($Signal.map,function (t) {    return Tick;},$Time.every(50));
    var Drop = function (a) {    return {ctor: "Drop",_0: a};};
-   var drop = A2($Signal.map,function (t) {    return Drop($Basics.truncate(t));},$Time.every(200));
+   var drop = A2($Signal.map,function (t) {    return Drop($Basics.truncate(t * 1000));},$Time.every(200));
    var init = {coins: _U.list([]),bins: $Dict.empty,countString: "",count: 0,started: false};
    var Model = F5(function (a,b,c,d,e) {    return {coins: a,bins: b,countString: c,count: d,started: e};});
    var coinsInBin = F2(function (binNumber,bins) {
